# YUVPlayer

./: .clang-format  .gitignore  CMakeLists.txt  CenterCanvas.cpp  CenterCanvas.h  CustomSizeDialog.h  FileReader.cpp  FileReader.h  LICENSE  MainFrame.cpp  MainFrame.h  README.md  Utils.cpp  Utils.h  YUVPlayer.cpp  YUVPlayer.h  YUVPlayer.rc  YUVPlayer.sln  YUVPlayer.vcxproj  YUVPlayer.vcxproj.filters  main.cpp  resource.h
SDL/lib/Win64/: SDL2main.lib
resources/: icon-100x100.xpm
scripts/: build-release.bat  build.bat  clean.bat  run.bat
wxWidgets/lib/vc_x64_lib/: keep.md
